[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/OverlayCRT.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/fonts/font_square_mini.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/frames/ui_panel.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/frames/bar_fill.png" type="Texture" id=4]
[ext_resource path="res://ui/frames/bar_fg.png" type="Texture" id=5]
[ext_resource path="res://ui/icons/icon_melee.png" type="Texture" id=6]
[ext_resource path="res://ui/fonts/font_terminal.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/MechView.gd" type="Script" id=8]
[ext_resource path="res://ui/frames/ui_panel_screen.tres" type="StyleBox" id=9]
[ext_resource path="res://ui/headshots.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=4]
resource_local_to_scene = true
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 80 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 7 )

[node name="MechView" type="PanelContainer"]
margin_right = 676.0
margin_bottom = 396.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 8 )

[node name="ViewBox" type="ViewportContainer" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 658.0
margin_bottom = 378.0

[node name="Viewport" type="Viewport" parent="ViewBox"]
size = Vector2( 640, 360 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ChaseCam" type="Camera" parent="ViewBox/Viewport"]
cull_mask = 1048573
fov = 90.0
size = 2.0
near = 0.2

[node name="MechHP" type="PanelContainer" parent="."]
margin_left = 459.0
margin_top = 258.0
margin_right = 658.0
margin_bottom = 378.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/panel = ExtResource( 9 )

[node name="HPGrid" type="GridContainer" parent="MechHP"]
margin_left = 4.0
margin_top = 4.0
margin_right = 195.0
margin_bottom = 116.0
columns = 2

[node name="LabelBody" type="Label" parent="MechHP/HPGrid"]
margin_right = 59.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Body"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBarBody" type="TextureProgress" parent="MechHP/HPGrid"]
margin_left = 63.0
margin_right = 191.0
margin_bottom = 25.0
rect_min_size = Vector2( 128, 16 )
size_flags_stretch_ratio = 2.0
value = 60.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelArmR" type="Label" parent="MechHP/HPGrid"]
margin_top = 29.0
margin_right = 59.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Arm R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBarArmR" type="TextureProgress" parent="MechHP/HPGrid"]
margin_left = 63.0
margin_top = 29.0
margin_right = 191.0
margin_bottom = 54.0
rect_min_size = Vector2( 128, 16 )
size_flags_stretch_ratio = 2.0
value = 60.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelArmL" type="Label" parent="MechHP/HPGrid"]
margin_top = 58.0
margin_right = 59.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Arm L"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBarArmL" type="TextureProgress" parent="MechHP/HPGrid"]
margin_left = 63.0
margin_top = 58.0
margin_right = 191.0
margin_bottom = 83.0
rect_min_size = Vector2( 128, 16 )
size_flags_stretch_ratio = 2.0
value = 60.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLegs" type="Label" parent="MechHP/HPGrid"]
margin_top = 87.0
margin_right = 59.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Legs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBarLegs" type="TextureProgress" parent="MechHP/HPGrid"]
margin_left = 63.0
margin_top = 87.0
margin_right = 191.0
margin_bottom = 112.0
rect_min_size = Vector2( 128, 16 )
size_flags_stretch_ratio = 2.0
value = 60.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MechWeapon" type="PanelContainer" parent="."]
margin_left = 18.0
margin_top = 306.0
margin_right = 156.0
margin_bottom = 378.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_styles/panel = ExtResource( 9 )

[node name="WeaponInfo" type="HBoxContainer" parent="MechWeapon"]
margin_left = 4.0
margin_top = 4.0
margin_right = 134.0
margin_bottom = 68.0

[node name="WeaponIcon" type="TextureRect" parent="MechWeapon/WeaponInfo"]
modulate = Color( 0, 1, 0, 1 )
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="WeaponText" type="Label" parent="MechWeapon/WeaponInfo"]
margin_left = 68.0
margin_top = 10.0
margin_right = 130.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Weapon
info"
align = 1

[node name="MechPilot" type="PanelContainer" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 225.0
margin_bottom = 106.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = ExtResource( 9 )

[node name="PilotInfo" type="HBoxContainer" parent="MechPilot"]
margin_left = 4.0
margin_top = 4.0
margin_right = 203.0
margin_bottom = 84.0

[node name="Portrait" type="MarginContainer" parent="MechPilot/PilotInfo"]
margin_right = 64.0
margin_bottom = 80.0

[node name="TeamColor" type="ColorRect" parent="MechPilot/PilotInfo/Portrait"]
margin_right = 64.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PilotFace" type="TextureRect" parent="MechPilot/PilotInfo/Portrait"]
margin_right = 64.0
margin_bottom = 80.0
texture = SubResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PilotName" type="Label" parent="MechPilot/PilotInfo"]
margin_left = 68.0
margin_right = 199.0
margin_bottom = 19.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Pilot Info"

[node name="OverlayCRT" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 18.0
margin_right = 658.0
margin_bottom = 378.0
